Fixed issue with background repeating and not covering entirety of page.

--- a/css.css
+++ b/css.css
@@ -1,6 +1,8 @@
 body{
     height: 100%;
     margin-left: 0px;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 a{
     text-decoration: none;
@@ -31,15 +33,14 @@ nav{
     top: 0;
     width: 100%;
     opacity: 1;
-    padding-bottom: 5px;
+    padding-bottom: 35px;
     z-index: 1;
 
 }
 #bg{
     height: 100%;
     background-position: center;
-    background-size: contain;
-    background-repeat: no-repeat;
+
     
 }
 #logo{
@@ -55,6 +56,7 @@ nav{
     padding: 70px;
     margin:50px;
     position: static;
+    opacity: 0.7;
     padding-top: 100px;
 }
 p{
